[gd_scene load_steps=13 format=3 uid="uid://dt23fmgnisj7e"]

[ext_resource type="Script" uid="uid://bcnewb00wkkqx" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://djqnqpo3uwyyw" path="res://blankSlateDemoAssets/qoobTextures/front/idle.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://bm0m46t6i5fni" path="res://blankSlateDemoAssets/plrMovementTextures/arrow.png" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://3www5l8ahblc" path="res://blankSlateDemoAssets/plrMovementTextures/landing.png" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://bfuysg0esujnq" path="res://blankSlateDemoAssets/Sounds/jump.wav" id="5_juxdh"]
[ext_resource type="AudioStream" uid="uid://cfw0ryhi4hsyl" path="res://blankSlateDemoAssets/Sounds/doubleJump.wav" id="6_4qbli"]
[ext_resource type="AudioStream" uid="uid://gvu47hrydyo4" path="res://blankSlateDemoAssets/Sounds/bump.wav" id="7_08u7w"]
[ext_resource type="AudioStream" uid="uid://dpe077vfbhd5r" path="res://blankSlateDemoAssets/Sounds/dive.wav" id="8_4qbli"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mwb40"]

[sub_resource type="BoxMesh" id="BoxMesh_sh265"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_mwb40"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereShape3D" id="SphereShape3D_4flbx"]

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_mask = 255
script = ExtResource("1_4flbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_mwb40")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.75, 0, 0, 0, 0.25, 0, 0, 0, 0.5, 0, 0.546733, -0.22546)
mesh = SubResource("BoxMesh_sh265")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_mwb40")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
collision_mask = 2
shape = SubResource("SphereShape3D_4flbx")
spring_length = 5.0
margin = 1.0

[node name="Node3D" type="Node3D" parent="CameraPivot/SpringArm3D"]

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D/Node3D"]
unique_name_in_owner = true

[node name="Skin" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
billboard = 2
shaded = true
texture_filter = 0
texture = ExtResource("2_onrkg")

[node name="DiveCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, 0, -1)
collision_mask = 2

[node name="Arrow" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, 5, 0, -5, -2.18557e-07, 0, 1.1, 0)
texture_filter = 0
texture = ExtResource("3_i3pqv")

[node name="ShadowCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 100, 0, 0, 0, 1, 0, 0, 0)
collision_mask = 2

[node name="Shadow" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, 0)
visible = false
texture_filter = 0
texture = ExtResource("4_hqtel")

[node name="Sounds" type="Node" parent="."]
unique_name_in_owner = true

[node name="jump" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("5_juxdh")

[node name="doubleJump" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("6_4qbli")

[node name="bump" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("7_08u7w")

[node name="dive" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("8_4qbli")
